# py-hook

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
py_hook/: __init__.py  core.py
tests/: test_py_hook.py
